--- a/style/splustar-ytp.css
+++ b/style/splustar-ytp.css
@@ -21,7 +21,7 @@ div.rel-block {
 }
 #footprint {
 	width: 808px;
-	height: 270px;
+	/* height: 270px; */
 	margin-left: 14px;
 	background: #eaeaea;
 	padding: 7px;
@@ -39,7 +39,7 @@ li.eventList {
 .eventOuter {
 	padding: 7px;
 	background: #cacaca;
-	height: 6em;
+	height: 7em;
 }
 .eventTitle {
 	font-weight: bold;
@@ -73,9 +73,10 @@ span.state {
 .lastPos {
 	display: none;
 	position: absolute;
-	top: 76px;
+	top: 6.3em;
 	height: 10px;
 	width: 10px;
+	opacity: 0.8;
 	background: #ee0000;
 	border: groove 3px #ee0000;
 		border-radius: 8px;
@@ -83,9 +84,10 @@ span.state {
 .prevPos {
 	display: none;
 	position: absolute;
-	top: 76px;
+	top: 6.3em;
 	height: 13px;
 	width: 13px;
+	opacity: 0.8;
 	background: #ffffff;
 	border: solid 1px #ee0000;
 		border-radius: 8px;
@@ -103,7 +105,7 @@ span.state {
  */
 @media screen 
 	and (min-device-width: 375px) 
-	and (max-device-width: 413px)
+	and (max-device-width: 414px)
 	and (-webkit-min-device-pixel-ratio: 2)
 	and (orientation: portrait)
 {
@@ -122,13 +124,13 @@ span.state {
 	}
 	#footprint {
 		width: 100%;
-		height: 1116px;
+		/* height: 1116px; */
 		margin-left: 0px;
 		padding: 7px;
 	}
 	.eventOuter {
 		padding: 7px;
-		height: 15em;
+		height: 18em;
 	}
 	.eventTitle {
 		font-size: 2em;
@@ -150,14 +152,14 @@ span.state {
 			border-radius: 168px;
 	}
 	.lastPos {
-		top: 206px;
+		top: 16.5em;
 		height: 20px;
 		width: 17px;
 		border: groove 3px #ee0000;
 			border-radius: 16px;
 	}
 	.prevPos {
-		top: 206px;
+		top: 16.5em;
 		height: 26px;
 		width: 26px;
 		border: solid 1px #ee0000;
